Add personal photo plus fix some bugs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-5">
                     <div class="pers-picture">
-                        <img src="http://via.placeholder.com/600x400" alt="Basheer" />
+                        <img src="assets/image/myphoto.jpg" alt="Basheer" />
                     </div><!-- .personal-pic -->
                 </div><!-- .col-xs-12 col-sm-5 -->
 
@@ -269,15 +269,7 @@
             </div><!-- .section-title -->
 
             <div class="portfolio-box">
-                <div class="filter">
-                    <button type="button" class="control m-btn" data-filter="all">All</button>
-                    <button type="button" class="control m-btn" data-filter=".illustration">Illustration</button>
-                    <button type="button" class="control m-btn" data-filter=".photoshop">Photoshop</button>
-                    <button type="button" class="control m-btn" data-filter=".website">Website</button>
-                    <button type="button" class="control m-btn" data-filter=".apps">Apps</button>
-                </div><!-- .filter -->
 
-                <div class="portfolio-filter">
                     <div class="row">
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
@@ -285,8 +277,8 @@
                                     <img src="http://via.placeholder.com/450x450" title="" alt="" />
                                 </a>
                                 <div class="hover">
-                                    <h4>Illustration Work</h4>
-                                    <label>illustration</label>
+                                    <h4>Neighborhood Map</h4>
+                                    <label>Google API & Knockout JS</label>
                                 </div>
                             </div>
                         </div><!-- .col-sm-4 col-sm-12 -->
@@ -296,8 +288,8 @@
                                     <img src="http://via.placeholder.com/450x450" title="" alt="" />
                                 </a>
                                 <div class="hover">
-                                    <h4>Photoshop Work</h4>
-                                    <label>photoshop</label>
+                                    <h4>Personal Website</h4>
+                                    <label>Current Website</label>
                                 </div>
                             </div>
                         </div><!-- .col-sm-4 col-sm-12 -->
@@ -307,48 +299,12 @@
                                     <img src="http://via.placeholder.com/450x450" title="" alt="" />
                                 </a>
                                 <div class="hover">
-                                    <h4>Illustration Work</h4>
-                                    <label>illustration</label>
+                                    <h4>Web Server</h4>
+                                    <label>python & flask framework</label>
                                 </div>
                             </div>
                         </div><!-- .col-sm-4 col-sm-12 -->
-
-                        <div class="col-sm-4 col-xs-6 mix photoshop">
-                            <div class="portfolio-elem animate">
-                                <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
-                                </a>
-                                <div class="hover">
-                                    <h4>Photoshop Work</h4>
-                                    <label>photoshop</label>
-                                </div>
-                            </div>
-                        </div><!-- .col-sm-4 col-sm-12 -->
-                        <div class="col-sm-4 col-xs-6 mix website">
-                            <div class="portfolio-elem animate">
-                                <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
-                                </a>
-                                <div class="hover">
-                                    <h4>Website Work</h4>
-                                    <label>Website</label>
-                                </div>
-                            </div>
-                        </div><!-- .col-sm-4 col-sm-12 -->
-                        <div class="col-sm-4 col-xs-6 mix apps">
-                            <div class="portfolio-elem animate">
-                                <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
-                                </a>
-                                <div class="hover">
-                                    <h4>Apps Work</h4>
-                                    <label>App</label>
-                                </div>
-                            </div>
-                        </div><!-- .col-sm-4 col-xs-6 -->
-
                     </div><!-- .row -->
-                </div><!-- .portfolio-filter -->
 
             </div><!-- .portfolio-box -->
         </div><!-- .container -->
