--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                     <div class="row">
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
-                                <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
+                                <a href="https://github.com/Basheer88/Basra-Neighborhood-Map" target="_blank">
+                                    <img src="assets/image/nm.jpg" title="Neighborhood ScreenShot" alt="Basra Neighborhood Map" />
                                 </a>
                                 <div class="hover">
                                     <h4>Neighborhood Map</h4>
@@ -285,7 +285,7 @@
                         <div class="col-sm-4 col-xs-6 mix photoshop">
                             <div class="portfolio-elem animate">
                                 <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
+                                    <img src="assets/image/web.jpg" title="Persoanl Web ScreenShot" alt="persoanl web" />
                                 </a>
                                 <div class="hover">
                                     <h4>Personal Website</h4>
