--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="current"><a href="#home">Home</a></li>
-                        <li><a  href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="#resume">Resume</a></li>
                         <li><a href="#work">Work</a></li>
                         <li><a href="#blog">Blog</a></li>
@@ -104,7 +103,7 @@
 
 
     <!--  About Section -->
-    <section id="about" class="section">
+    <section id="about" class="section grey-bg">
         <!-- Container -->
         <div class="container">
             <div class="section-title left">
@@ -145,61 +144,6 @@
 
     </section>
     <!-- About Section end -->
-
-
-    <!-- Services Section-->
-    <section id="services" class="section grey-bg">
-        <div class="container">
-            <div class="section-title">
-                <h2>My <span>Services</span></h2>
-                <p class="center">Some of the main services I provide</p>
-            </div><!-- .section-title -->
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="service">
-                        <span class="service-icon">
-                          <i class="fa fa-laptop fa-2x" aria-hidden="true"></i>
-                        </span>
-                        <h4>WEB DESIGN</h4>
-                        <div class="service-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada interdum. </p>
-                            <a class="m-btn" href="javascript:void(0);">Learn more</a>
-                        </div><!-- .service-desc -->
-                    </div><!-- .service -->
-                </div><!-- .col-sm-4 -->
-
-                <div class="col-sm-4">
-                    <div class="service">
-                        <span class="service-icon">
-                          <i class="fa fa-code fa-2x" aria-hidden="true"></i>
-                        </span>
-                        <h4>WEB DEVELOPMENT</h4>
-                        <div class="service-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada interdum. </p>
-                            <a class="m-btn" href="javascript:void(0);">Learn more</a>
-                        </div><!-- .service-desc -->
-                    </div><!-- .service -->
-                </div><!-- .col-sm-4 -->
-
-                <div class="col-sm-4">
-                    <div class="service">
-                        <span class="service-icon">
-                          <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>
-                        </span>
-                        <h4>MOBILE APPS</h4>
-                        <div class="service-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada interdum. </p>
-                            <a class="m-btn" href="javascript:void(0);">Learn more</a>
-                        </div><!-- .service-desc -->
-                    </div><!-- .service-box -->
-                </div><!-- .col-sm-4 -->
-
-            </div><!-- .row -->
-        </div><!-- .container -->
-    </section>
-    <!-- Services Section end -->
-
 
     <!-- Resume Section -->
     <section id="resume" class="section">
