--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>How I Became a Developer</title>
 	<link rel="icon" href="img/icon.png">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
 		</div>
 
 		<!-- Article Image -->
-		<img src="img/banner-image.jpg" alt="">
+		<img src="img/ch.jpg" alt="">
 		<div class="title">
 			<div class="title-heading">
 				<h1>How I became a Developer</a></h1>
