Update Personal photo and contact

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
                                 <a href="javascript:void(0);">
-                                    <img src="http://via.placeholder.com/450x450" title="" alt="" />
+                                    <img src="assets/image/wr.jpg" title="Writer App ScreenShot" alt="Writer App" />
                                 </a>
                                 <div class="hover">
                                     <h4>Web Server</h4>
