--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Basheer AbdulMutalib - Responsive Personal vCard">
+    <meta name="description" content="Basheer AbdulMutalib - Personal vCard">
     <meta name="keywords" content="Basheer AbdulMutalib, resume, cv, portfolio, personal, developer, clean, modern, minimal, web, blog">
     <meta name="author" content="Basheer">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Basheer AbdulMutalib - Personal Website</title>
 
     <!-- Icon -->
-    <link rel="icon" href="assets/image/b.png">
+    <link rel="icon" href="img/b.png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
@@ -19,17 +19,17 @@
     <!-- End -->
 
     <!-- Plugin Css -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <!-- End -->
 
     <!-- Theme css -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- End -->
 
     <!--[if lt IE 9]>
-    <script src="assets/js/html5shiv.min.js"></script>
-    <script src="assets/js/respond.min.js"></script>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -37,7 +37,7 @@
 <body>
     <!-- loading start -->
     <div id="loading">
-        <div class="ripple"><img alt="" src="assets/image/loading.gif" /></div>
+        <div class="ripple"><img alt="" src="img/loading.gif" /></div>
     </div>
     <!-- loading end -->
 
@@ -80,7 +80,7 @@
     <!-- Header end -->
 
     <!-- Home Section -->
-    <section id="home" class="home-banner" data-parallax="scroll" data-image-src="assets/image/com.jpg">
+    <section id="home" class="home-banner" data-parallax="scroll" data-image-src="img/com.jpg">
         <div class="container">
             <div class="welcome-text">
                 <h3>Hello! I'm</h3>
@@ -114,7 +114,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-5">
                     <div class="pers-picture">
-                        <img src="assets/image/myphoto.jpg" alt="Basheer" />
+                        <img src="img/myphoto.jpg" alt="Basheer" />
                     </div><!-- .personal-pic -->
                 </div><!-- .col-xs-12 col-sm-5 -->
 
@@ -218,7 +218,7 @@
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
                                 <a href="https://github.com/Basheer88/Basra-Neighborhood-Map" target="_blank">
-                                    <img src="assets/image/nm.jpg" title="Neighborhood ScreenShot" alt="Basra Neighborhood Map" />
+                                    <img src="img/nm.jpg" title="Neighborhood ScreenShot" alt="Basra Neighborhood Map" />
                                 </a>
                                 <div class="hover">
                                     <h4>Neighborhood Map</h4>
@@ -229,7 +229,7 @@
                         <div class="col-sm-4 col-xs-6 mix photoshop">
                             <div class="portfolio-elem animate">
                                 <a href="javascript:void(0);">
-                                    <img src="assets/image/web.jpg" title="Persoanl Web ScreenShot" alt="persoanl web" />
+                                    <img src="img/web.jpg" title="Persoanl Web ScreenShot" alt="persoanl web" />
                                 </a>
                                 <div class="hover">
                                     <h4>Personal Website</h4>
@@ -240,7 +240,7 @@
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
                                 <a href="javascript:void(0);">
-                                    <img src="assets/image/wr.jpg" title="Writer App ScreenShot" alt="Writer App" />
+                                    <img src="img/wr.jpg" title="Writer App ScreenShot" alt="Writer App" />
                                 </a>
                                 <div class="hover">
                                     <h4>Web Server</h4>
@@ -267,7 +267,7 @@
                 <div class="col-sm-4 col-sm-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/image/ch.jpg" title="Life Change" alt="Life Change" />
+                            <img src="img/ch.jpg" title="Life Change" alt="Life Change" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
                             <h3>Ends do not always match beginnings</h3>
@@ -287,7 +287,7 @@
                 <div class="col-sm-4 col-sm-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/image/ai.jpg" title="Artificail Intelegence" alt="Artificail Intelegence" />
+                            <img src="img/ai.jpg" title="Artificail Intelegence" alt="Artificail Intelegence" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
                             <h3>AI is Taking Over</h3>
@@ -295,7 +295,7 @@
                                 <p>Posted On Oct 2018</p>
                             </div>
                             <div class="blog-desc">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy ...</p>
+                                <p>A lot of myths in the past turns out to be facts now days. AI is one of these myths that Became true and start taking over.....</p>
                             </div>
                             <div class="blog-action">
                                 <a href="#" class="m-btn">Read More</a>
@@ -405,21 +405,21 @@
 
 
     <!-- Jquery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- End -->
 
     <!-- Plugin JS -->
-    <script src="assets/js/bootstrap.js"></script><!--bootstrap-->
-    <script src="assets/js/parallax.min.js"></script><!-- parallax library -->
-    <script src="assets/js/typed.min.js"></script><!-- typed library -->
-    <script src="assets/js/mixitup.min.js"></script><!-- mixitup -->
-    <script src="assets/js/jquery.viewportchecker.min.js"></script><!-- viewportchecker -->
+    <script src="js/bootstrap.js"></script><!--bootstrap-->
+    <script src="js/parallax.min.js"></script><!-- parallax library -->
+    <script src="js/typed.min.js"></script><!-- typed library -->
+    <script src="js/mixitup.min.js"></script><!-- mixitup -->
+    <script src="js/jquery.viewportchecker.min.js"></script><!-- viewportchecker -->
 
     <!-- End -->
 
     <!-- Theme Js -->
-    <script src="assets/js/jquery.nav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="js/jquery.nav.js"></script>
+    <script src="js/main.js"></script>
     <!-- End -->
 
 </body>
