Modify Blog How I became

--- a/How-I-Became-A-Developer.html
+++ b/How-I-Became-A-Developer.html
@@ -5,6 +5,8 @@
 	<link rel="icon" href="img/icon.png">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="How I Becane A Developer - Basheer AbdulMutalib">
+    <meta name="keywords" content="Basheer AbdulMutalib, blog, developer, clean, Personal, Article, life story">
 	<!-- Required CSS stylesheet -->
 	<link rel="stylesheet" href="css/Blog-Small.css">
 	<link rel="stylesheet" media="screen and (min-width:401px)" href="css/Blog-Medium.css">
