--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </div><!-- .col-sm-4 col-sm-12 -->
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
-                                <a href="javascript:void(0);">
+                                <a href="https://github.com/Basheer88/writerapp">
                                     <img src="img/wr.jpg" title="Writer App ScreenShot" alt="Writer App" />
                                 </a>
                                 <div class="hover">
@@ -290,7 +290,7 @@
                             <img src="img/ai.jpg" title="Artificail Intelegence" alt="Artificail Intelegence" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
-                            <h3>AI is Taking Over</h3>
+                            <h3>AI Is Taking Over</h3>
                             <div class="blog-meta">
                                 <p>Posted On Oct 2018</p>
                             </div>
@@ -307,15 +307,15 @@
                 <div class="col-sm-4 col-sm-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="http://via.placeholder.com/600x400" title="Blog" alt="Blog" />
+                            <img src="img/soon.jpg" title="soon" alt="soon" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
-                            <h3>You Need Website For Your Business</h3>
+                            <h3>Coming Soon</h3>
                             <div class="blog-meta">
-                                <p>Posted On 25th Oct 2017</p>
+                                <p>Posted On --- ----</p>
                             </div>
                             <div class="blog-desc">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy ...</p>
+                                <p>My newest article will be published here as soon as i finished writing a good one. Stay tuned...</p>
                             </div>
                             <div class="blog-action">
                                 <a href="#" class="m-btn">Read More</a>
