Fix height div problem

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <!-- Body Start -->
@@ -89,7 +90,6 @@
                     <h3 aria-hidden="true">WEB DESIGNER</h3>
                     <h3 aria-hidden="true">WEB DEVELOPER</h3>
                     <h3 aria-hidden="true">FULL STACK DEVELOPER</h3>
-
                 </div>
                 <h3 class="typed-text"><span id="typed"></span></h3>
                 <a href="#about" class="icon-btn">
@@ -138,10 +138,8 @@
                         </div>
                     </div><!-- .personal-info -->
                 </div><!-- .col-xs-12 col-sm-5 -->
-
             </div><!-- .Row -->
         </div><!-- .Container -->
-
     </section>
     <!-- About Section end -->
 
@@ -213,7 +211,6 @@
             </div><!-- .section-title -->
 
             <div class="portfolio-box">
-
                     <div class="row">
                         <div class="col-sm-4 col-xs-6 mix illustration">
                             <div class="portfolio-elem animate">
@@ -270,15 +267,17 @@
                             <img src="img/ch.jpg" title="Life Change" alt="Life Change" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
-                            <h3>Ends do not always match beginnings</h3>
-                            <div class="blog-meta">
-                                <p>Posted On Sep 2018</p>
-                            </div>
-                            <div class="blog-desc">
-                            	<p>When I was younger my dream was to be a geologist, right now my interests turned to be in computers.....</p>
-                            </div>
+                        	<div class="box">
+                        		<h3>Ends do not always match beginnings</h3>
+                        		<div class="blog-meta">
+                        			<p>Posted On Sep 2018</p>
+                        		</div>
+                            	<div class="blog-desc">
+                            		<p>When I was younger my dream was to be a geologist, right now my interests turned to be in computers.....</p>
+                            	</div>
+                        	</div>
                             <div class="blog-action">
-                                <a href="#" class="m-btn">Read More</a>
+                                <a href="https://www.basheer88.com/How-I-Became-A-Developer.html" class="m-btn">Read More</a>
                             </div>
                         </div><!-- .blog-contents -->
                     </div><!-- .blog-item -->
@@ -290,15 +289,17 @@
                             <img src="img/ai.jpg" title="Artificail Intelegence" alt="Artificail Intelegence" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
-                            <h3>AI Is Taking Over</h3>
-                            <div class="blog-meta">
-                                <p>Posted On Oct 2018</p>
-                            </div>
-                            <div class="blog-desc">
-                                <p>A lot of myths in the past turns out to be facts now days. AI is one of these myths that Became true and start taking over.....</p>
-                            </div>
+                        	<div class="box">
+                        		<h3>AI Is Taking Over</h3>
+                        		<div class="blog-meta">
+                        			<p>Posted On Oct 2018</p>
+                        		</div>
+                        		<div class="blog-desc">
+                        			<p>A lot of myths in the past turns out to be facts now days. AI is one of these myths that Became true and start taking over.....</p>
+                            	</div>
+                        	</div>
                             <div class="blog-action">
-                                <a href="#" class="m-btn">Read More</a>
+                                <a href="https://www.basheer88.com/AI-Is-Taking-Over.html" class="m-btn">Read More</a>
                             </div>
                         </div><!-- .blog-contents -->
                     </div><!-- .blog-item -->
@@ -310,13 +311,15 @@
                             <img src="img/soon.jpg" title="soon" alt="soon" />
                         </div><!-- .blog-img -->
                         <div class="blog-contents">
-                            <h3>Coming Soon</h3>
-                            <div class="blog-meta">
-                                <p>Posted On --- ----</p>
-                            </div>
-                            <div class="blog-desc">
-                                <p>My newest article will be published here as soon as i finished writing a good one. Stay tuned...</p>
-                            </div>
+                        	<div class="box">
+                        		<h3>Coming Soon</h3>
+                        		<div class="blog-meta">
+                        			<p>Posted On --- ----</p>
+                            	</div>
+                            	<div class="blog-desc">
+                                	<p>My newest article will be published here as soon as i finished writing a good one. Stay tuned...</p>
+                            	</div>
+                        	</div>
                             <div class="blog-action">
                                 <a href="#" class="m-btn">Read More</a>
                             </div>
@@ -393,20 +396,14 @@
                     <p class="center"><a href="https://www.basheer88.com">www.basheer88.com</a></p>
                 </div>
             </div><!-- .address -->
-
         </div><!-- .container -->
         <p class="copyright, center">&copy; 2018 Copyright Basheer</p>
     </footer><!-- .footer-area -->
     <!-- Footer Section end -->
 
 
-
-
-
-
     <!-- Jquery -->
-    <script src="js/jquery.js"></script>
-    <!-- End -->
+    <script src="js/jquery-1.12.4.min.js"></script>
 
     <!-- Plugin JS -->
     <script src="js/bootstrap.js"></script><!--bootstrap-->
@@ -415,12 +412,10 @@
     <script src="js/mixitup.min.js"></script><!-- mixitup -->
     <script src="js/jquery.viewportchecker.min.js"></script><!-- viewportchecker -->
 
-    <!-- End -->
-
     <!-- Theme Js -->
+    <script src="js/jquery.matchHeight-min.js"></script>
     <script src="js/jquery.nav.js"></script>
     <script src="js/main.js"></script>
-    <!-- End -->
 
 </body>
 <!-- Body End -->
