--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="img/b.png">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
 
     <!-- End -->
 
