Add LinkedIn Link

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/basheer-hassoon-profile/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                             </ul>
                         </div><!-- .social-link -->
                         <div class="about-actions">
