--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
         <div class="container">
             <div class="welcome-text">
                 <h3>Hello! I'm</h3>
-                <h2>Basheer A.</h2>
+                <h2>Basheer</h2>
                 <div id="typed-strings">
-                    <h3 aria-hidden="true">WEB DESIGNER</h3>
-                    <h3 aria-hidden="true">WEB DEVELOPER</h3>
+                    <h3 aria-hidden="true">Blochchain Developer</h3>
                     <h3 aria-hidden="true">FULL STACK DEVELOPER</h3>
                 </div>
                 <h3 class="typed-text"><span id="typed"></span></h3>
